--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="mainlogo" href="#">
                     <p class="img">
                       
-                        <img src="images/shein.png" alt="">
+                        <img src="https://www.uplevelrewards.shop/images/uplevelslogo.png" alt="">
                     </p>
                     <span href="index-2.html">US FASHION INSIDER</span>
             
