--- a/walmart.html
+++ b/walmart.html
@@ -61,21 +61,21 @@
             <button>YES</button>
             <button>NO</button>
         </div>
-    <div class="question inactive">
-        <h3>How often do you update your wardrobe with new items?</h3>
-        <p>Your shopping habits help us tailor our offers and style suggestions.</p>
-        <button>Every season</button>
-        <button>Several times a year</button>
-        <button>Rarely</button>
-    </div>
-    <div class="question inactive">
-        <h3>Would personalized fashion recommendations enhance your shopping experience?</h3>
-        <p>We value your input to refine our style curation and offerings.</p>
-        <button>Yes, definitely</button>
-        <button>Possibly</button>
-        <button>Not interested</button>
-    </div>
-    </div>
+ <div class="question inactive">
+    <h3>Are you satisfied with the product variety at Walmart?</h3>
+    <p>We strive to offer a wide range of products to meet your needs. Let us know how we’re doing!</p>
+    <button>Very satisfied</button>
+    <button>Somewhat satisfied</button>
+    <button>Not satisfied</button>
+</div>
+<div class="question inactive">
+    <h3>Do you find the staff at Walmart helpful?</h3>
+    <p>Our team is here to assist you. Your feedback helps us improve our service and support.</p>
+    <button>Always helpful</button>
+    <button>Sometimes helpful</button>
+    <button>Rarely helpful</button>
+</div>
+
     
     
                 </div>
