--- a/continue.html
+++ b/continue.html
@@ -44,8 +44,8 @@
     <img src="images/image3.jpg" alt="Reward">
 </div>
 <ol class="end-list">
-    <li>Confirm Your Delivery Details (Click on the "CLAIM NOW" button): Provide the necessary information for us to send your <span style="font-weight:800;background:#c21217;color: white;padding: 2px 7px;border-radius: 5px;">voucher worth up to $750 at Walmart</span>. Be sure to complete the required details after answering a few sponsored questions to secure your reward.</li>
-    <li><span style="font-weight:800;background:#c21217;color: white;padding: 2px 7px;border-radius: 5px;">Engage with Our Sponsored Offers:</span> Check out <span style="font-weight:800;background:#c21217;color: white;padding: 2px 7px;border-radius: 5px;">our exclusive deals</span> to maximize your voucher value and support the continuation of this rewards program. Act quickly—these offers are available for a limited time!</li>
+    <li>Confirm Your Delivery Details (Click on the "CLAIM NOW" button): Provide the necessary information for us to send your <span style="font-weight:800;background:;color: white;padding: 2px 7px;border-radius: 5px;">voucher worth up to $750 at Walmart</span>. Be sure to complete the required details after answering a few sponsored questions to secure your reward.</li>
+    <li><span style="font-weight:800;background:;color: white;padding: 2px 7px;border-radius: 5px;">Engage with Our Sponsored Offers:</span> Check out <span style="font-weight:800;background:#135EC7;color: white;padding: 2px 7px;border-radius: 5px;">our exclusive deals</span> to maximize your voucher value and support the continuation of this rewards program. Act quickly—these offers are available for a limited time!</li>
     <li>Get Ready for Your Reward: Your voucher will be delivered within 5 days after completing all the steps.</li>
 </ol>
 
