--- a/continue.html
+++ b/continue.html
@@ -45,8 +45,8 @@
         
                     </div>
                     <ol class="end-list">
-    <li>Confirm Your Delivery Details (Click on "CLAIM NOW" button): Inform us where to send your <span style="font-weight:800;background:#c21217;color: white;padding: 2px 7px;border-radius: 5px;">$750 Fashion Gift Card</span>. Please provide your delivery address after responding to our sponsored questions to secure your gift card.</li>
-    <li><span style="font-weight:800;background:#c21217;color: white;padding: 2px 7px;border-radius: 5px;">Engage with Our Sponsored Offers:</span> Explore <span style="font-weight:800;background:#c21217;color: white;padding: 2px 7px;border-radius: 5px;">our selected deals</span> to double your gift card and support the continuation of this program. Act quickly—these exclusive opportunities are limited!</li>
+    <li>Confirm Your Delivery Details (Click on "CLAIM NOW" button): Inform us where to send your <span style="font-weight:800;background:#135EC7;color: white;padding: 2px 7px;border-radius: 5px;">$750 Fashion Gift Card</span>. Please provide your delivery address after responding to our sponsored questions to secure your gift card.</li>
+    <li><span style="font-weight:800;background:#135EC7;color: white;padding: 2px 7px;border-radius: 5px;">Engage with Our Sponsored Offers:</span> Explore <span style="font-weight:800;background:#135EC7;color: white;padding: 2px 7px;border-radius: 5px;">our selected deals</span> to double your gift card and support the continuation of this program. Act quickly—these exclusive opportunities are limited!</li>
     <li>Prepare for the Unveiling: Expect the delivery of your $750 Gift card within 5 days. </li>
 
     
