--- a/walm2.html
+++ b/walm2.html
@@ -146,8 +146,8 @@
         <!-- Willa Everly Comment -->
         <div class="comment sort-coms start-coms" data-order="1" data-likes="1">
             <a class="cmmimg" href="https://www.facebook.com/willa.everly" target="_blank"><img src="images/1.jpg" width="48" height="48" alt="Willa Everly"></a>
-            <a href="https://www.facebook.com/willa.everly" target="_blank" class="comment-user-name"><span> Willa Everly </span></a>
-            <p class="comment-text">This is the best thing that ever happened to me, I lived in <span class="location">United States</span> since birth.. And now to receive this amazing gift card! This progam is amazing!!</p>
+            <a href="https://www.facebook.com/willa.everly" target="_blank" class="comment-user-name"><span> Chelsea Dunn </span></a>
+            <p class="comment-text">This is what I've got. I still have $400 left</p>
                 <img class="fb-img" src="images/test1.jpg" width="210" alt="Laura's ">
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
