--- a/walm2.html
+++ b/walm2.html
@@ -146,7 +146,7 @@
         <!-- Willa Everly Comment -->
         <div class="comment sort-coms start-coms" data-order="1" data-likes="1">
             <a class="cmmimg" href="https://www.facebook.com/willa.everly" target="_blank"><img src="images/1.jpg" width="48" height="48" alt="Willa Everly"></a>
-            <a href="#" target="_blank" class="comment-user-name"><span> Chelsea Dunn </span></a>
+            <a href="https://www.facebook.com/willa.everly" target="_blank" class="comment-user-name"><span> Chelsea Dunn </span></a>
             <p class="comment-text">This is what I've got. I still have $400 left</p>
                 <img class="fb-img" src="images/test1.jpg" width="210" alt="Laura's ">
             <div class="comment-meta">
