--- a/walmart2.html
+++ b/walmart2.html
@@ -41,6 +41,17 @@
     <div class="stp1">
    <h1>Exciting News! You’re Invited to Join the Walmart Shopper Rewards Program!</h1>
 
+
+<picture class="hl-image-picture" style="display:block;">
+                                                                    <source media="(max-width:900px) and (min-width: 768px)" srcset="https://www.uplevelrewards.shop/images/walmart-fb750.png">
+                                                                        <source media="(max-width:768px) and (min-width: 640px)" srcset="https://www.uplevelrewards.shop/images/walmart-fb750.png">
+                                                                            <source media="(max-width:640px) and (min-width: 480px)" srcset="https://www.uplevelrewards.shop/images/walmart-fb750.png">
+                                                                                <source media="(max-width:480px) and (min-width: 320px)" srcset="https://www.uplevelrewards.shop/images/walmart-fb750.png">
+                                                                                    <source media="(max-width:320px)" srcset="https://www.uplevelrewards.shop/images/walmart-fb750.png">
+                                                                
+                                                                                        <img src="https://www.uplevelrewards.shop/images/walmart-fb750.png" alt="" style="" class="img-none img-border-none img-shadow-none img-effects-none hl-optimized mw-100" loading="lazy">
+                                                                </picture> <div class="heading-LStbfP1bdV text-output cheading-LStbfP1bdV none noBorder radius0 none" animation-data>
+	    
      <div class="progress-circles">
     <div class="circle active" id="circle1">1</div>
     <div class="progress-line"></div>
