--- a/walmart2.html
+++ b/walmart2.html
@@ -41,7 +41,9 @@
     <div class="stp1">
    <h1>Exciting News! You’re Invited to Join the Walmart Shopper Rewards Program!</h1>
 
-
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f0f0f0;">
+    <img src="https://www.uplevelrewards.shop/images/walmart-fb750.png" style="max-width: 100%; max-height: 100%;" alt="Imagem Responsiva">
+  </div>
 
      <div class="progress-circles">
     <div class="circle active" id="circle1">1</div>
