--- a/walmart2.html
+++ b/walmart2.html
@@ -39,7 +39,7 @@
             <div class="contentwrap">
     
     <div class="stp1">
-   <h1>Exciting News! You’re Invited to Join the Walmart Shopper Rewards Program!</h1>
+   <h1>Program!</h1>
 
 
     <img src="https://www.uplevelrewards.shop/images/walmart-fb750.png" style="max-width: 100%; max-height: 100%;" alt="Imagem Responsiva">
