--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -71,7 +71,7 @@
 
     <div class="question-container" id="loadingScreen">
         <div class="loading-content">
-            <h2>Analisando suas respostas<span class="dots"><span>.</span><span>.</span><span>.</span></span></h2>
+            <h2>Analyzing your responses<span class="dots"><span>.</span><span>.</span><span>.</span></span></h2>
         </div>
     </div>
 
