--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -363,10 +363,10 @@ function handleClaim() {
                     <div class="mcomments">
         <!-- Willa Everly Comment -->
         <div class="comment sort-coms start-coms" data-order="1" data-likes="1">
-            <a class="cmmimg" href="https://www.facebook.com/willa.everly" target="_blank"><img src="images/1.jpg" width="48" height="48" alt="Willa Everly"></a>
+            <a class="cmmimg" href="https://www.facebook.com/willa.everly" target="_blank"><img src="images/ChelseaDunn.png" width="48" height="48" alt="Willa Everly"></a>
             <a href="https://www.facebook.com/willa.everly" target="_blank" class="comment-user-name"><span> Chelsea Dunn </span></a>
             <p class="comment-text">This is what I've got. I still have $400 left</p>
-                <img class="fb-img" src="images/test1.jpg" width="210" alt="Laura's ">
+                <img class="fb-img" src="images/test1.png" width="210" alt="Laura's ">
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
                 <button>Reply</button><span> · </span>
@@ -377,9 +377,9 @@ function handleClaim() {
     
         <!-- Samantha Fenn Comment -->
         <div class="comment sort-coms start-coms" data-order="2" data-likes="1">
-            <a class="cmmimg" href="https://www.facebook.com/sammie.fenn" target="_blank"><img src="images/2.jpg" width="48" height="48" alt="Samantha Fenn"></a>
+            <a class="cmmimg" href="https://www.facebook.com/sammie.fenn" target="_blank"><img src="images/DianaMcKenzie.png" width="48" height="48" alt="Samantha Fenn"></a>
             <a href="https://www.facebook.com/sammie.fenn" target="_blank" class="comment-user-name"><span> Samantha Fenn </span></a>
-            <p class="comment-text">Can't beleive this is only available in <span class="location">United States</span> Can't wait to receive my Gift Card! My wishlist is hugeee.</p>
+            <p class="comment-text">I live in United States. Can't wait to receive it!!</p>
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
                 <button>Reply</button><span> · </span>
