--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -375,10 +375,10 @@ function handleClaim() {
             </div>
         </div>
     
-        <!-- Samantha Fenn Comment -->
+        <!-- Diana McKenzie Comment -->
         <div class="comment sort-coms start-coms" data-order="2" data-likes="1">
             <a class="cmmimg" href="https://www.facebook.com/sammie.fenn" target="_blank"><img src="images/DianaMcKenzie.png" width="48" height="48" alt="Samantha Fenn"></a>
-            <a href="https://www.facebook.com/sammie.fenn" target="_blank" class="comment-user-name"><span> Samantha Fenn </span></a>
+            <a href="https://www.facebook.com/sammie.fenn" target="_blank" class="comment-user-name"><span> Diana McKenzie </span></a>
             <p class="comment-text">I live in United States. Can't wait to receive it!!</p>
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
