--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -444,7 +444,7 @@ function handleClaim() {
     
     <!-- Chris Müller Comment -->
     <div class="comment sort-coms" data-order="7" data-likes="3">
-        <a class="cmmimg" href="https://www.facebook.com/profile.php?id=100010528209702" target="_blank"><img src="images/11.jpg" width="48" height="48" alt="Zoe Bennetts"></a>
+        <a class="cmmimg" href="https://www.facebook.com/profile.php?id=100010528209702" target="_blank"><img src="images/ChrisMüller.png" width="48" height="48" alt="Zoe Bennetts"></a>
         <a href="https://www.facebook.com/profile.php?id=100010528209702" target="_blank" class="comment-user-name"><span>Chris Müller</span></a>
         <p class="comment-text">Can't beleive this is only available in United States Can't wait to receive my Gift Card! My wishlist is hugeee.</p>
         <img class="fb-img" src="images/test4.png" width="210" alt="Laura's ">
