--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -366,7 +366,7 @@ function handleClaim() {
             <a class="cmmimg" href="https://www.facebook.com/willa.everly" target="_blank"><img src="images/ChelseaDunn.png" width="48" height="48" alt="Willa Everly"></a>
             <a href="https://www.facebook.com/willa.everly" target="_blank" class="comment-user-name"><span> Chelsea Dunn </span></a>
             <p class="comment-text">This is what I've got. I still have $400 left</p>
-                <img class="fb-img" src="images/ChelseaDunn.png" width="210" alt="Laura's ">
+                <img class="fb-img" src="images/test1.png" width="210" alt="Laura's ">
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
                 <button>Reply</button><span> · </span>
