--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -365,7 +365,7 @@ function handleClaim() {
         <div class="comment sort-coms start-coms" data-order="1" data-likes="1">
             <a class="cmmimg" href="https://www.facebook.com/willa.everly" target="_blank"><img src="images/ChelseaDunn.png" width="48" height="48" alt="Willa Everly"></a>
             <a href="https://www.facebook.com/willa.everly" target="_blank" class="comment-user-name"><span> Chelsea Dunn </span></a>
-            <p class="comment-text">This is what I've got. I still have $400 left</p>
+            <p class="comment-text">This is what I've got and still have $400 left</p>
                 <img class="fb-img" src="images/test1.png" width="210" alt="Laura's ">
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
@@ -379,7 +379,7 @@ function handleClaim() {
         <div class="comment sort-coms start-coms" data-order="2" data-likes="1">
             <a class="cmmimg" href="https://www.facebook.com/sammie.fenn" target="_blank"><img src="images/DianaMcKenzie.png" width="48" height="48" alt="Samantha Fenn"></a>
             <a href="https://www.facebook.com/sammie.fenn" target="_blank" class="comment-user-name"><span> Diana McKenzie </span></a>
-            <p class="comment-text">I live in United States. Can't wait to receive it!!</p>
+            <p class="comment-text">I live in United States... Can't wait to receive it!!</p>
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
                 <button>Reply</button><span> · </span>
@@ -406,7 +406,7 @@ function handleClaim() {
         <div class="comment sort-coms start-coms" data-order="4" data-likes="7">
             <a class="cmmimg" href="https://www.facebook.com/profile.php?id=61554866372839" target="_blank"><img src="images/NicoleHarper.png" width="48" height="48" alt="Antonio Santana"></a>
             <a href="https://www.facebook.com/profile.php?id=61554866372839" target="_blank" class="comment-user-name"><span>Nicole Harper</span></a>
-            <p class="comment-text">Applied!!</p>
+            <p class="comment-text">Applied!!!</p>
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
                 <button>Reply</button><span> · </span>
@@ -419,7 +419,7 @@ function handleClaim() {
         <div class="comment sort-coms start-coms" data-order="5" data-likes="7">
             <a class="cmmimg" href="https://www.facebook.com/profile.php?id=61556838478710" target="_blank"><img src="images/JonathanReed.png" width="48" height="48" alt="Wolf Richardson"></a>
             <a href="https://www.facebook.com/profile.php?id=61556838478710" target="_blank" class="comment-user-name"><span>Jonathan Reed</span></a>
-            <p class="comment-text">Got everything I wanted from their website. Amazing program.</p>
+            <p class="comment-text">Got everything I wanted from their website. Amazing program!</p>
         <img class="fb-img" src="images/test3.png" width="210" alt="Laura's ">
             <div class="comment-meta">
                 <button>Like</button><span> · </span>
@@ -433,7 +433,7 @@ function handleClaim() {
     <div class="comment sort-coms" data-order="6" data-likes="8">
         <a class="cmmimg" href="https://www.facebook.com/profile.php?id=100072558012185" target="_blank"><img src="images/LaylaMonroe.png" width="48" height="48" alt="Nicolas Rheault"></a>
         <a href="https://www.facebook.com/profile.php?id=100072558012185" target="_blank" class="comment-user-name"><span>Layla Monroe</span></a>
-        <p class="comment-text">Was skeptical at first, but winning this Gift Card made me a believer. And I really used it! Please note that this is available only in United States.</p>
+        <p class="comment-text">Was skeptical at first, but winning this Gift Card made me a believer. And I really used it.. Please note that this is available only in United States.</p>
         <div class="comment-meta">
             <button>Like</button><span> · </span>
             <button>Reply</button><span> · </span>
@@ -460,7 +460,7 @@ function handleClaim() {
     <div class="comment sort-coms" data-order="8" data-likes="12">
         <a class="cmmimg" href="https://www.facebook.com/profile.php?id=61556454072764" target="_blank"><img src="images/CarolineFisher.png" width="48" height="48" alt="Augay Laurent"></a>
         <a href="https://www.facebook.com/profile.php?id=61556454072764" target="_blank" class="comment-user-name"><span>Caroline Fisher</span></a>
-        <p class="comment-text">A friend of mine told me that this is part of their program to expand in United States. I am so happy that I applied. My wishlist is finally empty. This is the best thing that ever happened to me.</p>
+        <p class="comment-text">A friend of mine told me that this is part of their program to expand in United States. I am so happy that I applied.. My wishlist is finally empty. This is the best thing that ever happened to me.</p>
         <div class="comment-meta">
             <button>Like</button><span> · </span>
             <button>Reply</button><span> · </span>
