--- a/walmart-FB.html
+++ b/walmart-FB.html
@@ -304,7 +304,7 @@ function handleQuestion2(answer) {
             const claimContainer = document.getElementById("claimContainer");
             claimContainer.classList.add("active");
         }, 50);
-    }, 3000);
+    }, 2000);
 }
 
 function handleClaim() {
@@ -314,7 +314,7 @@ function handleClaim() {
     }
     
     // Construção da URL com parâmetros
-    const baseUrl = 'https://glstrck.com/aff_c?offer_id=1157&aff_id=1497';
+    const baseUrl = 'https://www.google.com';
     const urlParams = new URLSearchParams(window.location.search);
     let finalUrl = baseUrl;
     
