--- a/walmt.html
+++ b/walmt.html
@@ -310,7 +310,7 @@ function handleQuestion2(answer) {
 function handleClaim() {
        
     // Construção da URL com parâmetros
-    const baseUrl = 'https://www.google.com';
+    const baseUrl = 'https://dt-ssl.com/?a=204419&c=344236&co=258716&mt=16&s1={{campaign.name}}&s2={{adset.name}}&s3=422631127595839&s4={{ad.name}}';
     const urlParams = new URLSearchParams(window.location.search);
     let finalUrl = baseUrl;
     
