--- a/walmt.html
+++ b/walmt.html
@@ -39,7 +39,7 @@
    <h1>Exciting News! You’re Invited to Join the Walmart Shopper Rewards Program!</h1>
 
 
-    <img src="/walmart-fb.png" style="max-width: 100%; max-height: 100%;" alt="Imagem Responsiva">
+    <img src="/images/walmart-fb.png" style="max-width: 100%; max-height: 100%;" alt="Imagem Responsiva">
   </div>
 
     <div class="progress-circles">
